--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,10 @@
 RewriteEngine on
 
+php_value post_max_size 100M
+php_value upload_max_filesize 100M
+php_value memory_limit 300M
+php_value max_execution_time 259200
+
 # если директория или файл существуют, использовать их напрямую
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
