--- a/.htaccess
+++ b/.htaccess
@@ -1,13 +1,12 @@
 RewriteEngine on
 
-php_value post_max_size 100M
-php_value upload_max_filesize 100M
-php_value memory_limit 300M
-php_value max_execution_time 259200
+# php5_value post_max_size 100M
+# php5_value upload_max_filesize 100M
+# php5_value memory_limit 300M
+# php5_value max_execution_time 259200
 
-# если директория или файл существуют, использовать их напрямую
+# If directory or file exists - use it direct path
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-
-# иначе отправлять запрос на файл index.php
+# Else run php script
 RewriteRule . index.php
